applications/demo-windows-k8s-networking/manifests/base-config/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-vmpool-windows
  namespace: demo-windows-k8s-networking
  annotations:
    argocd.argoproj.io/sync-wave: "20"
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    kubevirt.io/vmpool: vmpool-windows
  type: ClusterIP
